WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181432
[GStreamer] Missing notifications to player client
https://bugs.webkit.org/show_bug.cgi?id=181432
Summary
[GStreamer] Missing notifications to player client
Philippe Normand
Reported
2018-01-09 05:07:17 PST
+++ This bug was initially created as a clone of
Bug #180197
+++ Notably when audio/video tracks change and when the pipeline state changes.
Attachments
Patch
(9.76 KB, patch)
2018-01-09 05:11 PST
,
Philippe Normand
cgarcia
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2018-01-09 05:11:42 PST
Created
attachment 330813
[details]
Patch
Philippe Normand
Comment 2
2018-01-09 06:00:06 PST
Committed
r226629
: <
https://trac.webkit.org/changeset/226629
>
Radar WebKit Bug Importer
Comment 3
2018-01-09 06:01:25 PST
<
rdar://problem/36374454
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug